--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,26 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any styles
- * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
- * file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+.header1 {
+	display: inline-block;
+	background-color: green;
+	width: 90%;
+}
+.header2{
+	background-color: red;
+	display: inline-block;
+	vertical-align: top;
+}
+
+input {
+	display: block;
+}
+
+.password {
+	margin-bottom: 1em;
+}
+
+.submit {
+	display: inline-block;
+}
+
+.register {
+	margin-left: 4em;
+}
