--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
 		<input class= "submit register" type='submit' value="Register"> 
 	</form>
 </div>
+<%= render "shared/header" %>
 <%= yield %>
 
 </body>
