--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<div class = 'sidebar'>
+</div>
+<div class = 'walmart'>
+</div>
+<div class = 'amazon'>
+</div>
+<div class = 'target'>
+</div>
