--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,12 +1,15 @@
 .header1 {
 	display: inline-block;
 	background-color: green;
-	width: 90%;
+	box-sizing: border-box;
+	width: 88%;
 }
 .header2{
 	background-color: red;
 	display: inline-block;
+	box-sizing: border-box;
 	vertical-align: top;
+	width: 8%;
 }
 
 input {
@@ -14,13 +17,33 @@ input {
 }
 
 .password {
-	margin-bottom: 1em;
+	/*margin-bottom: 1em;*/
 }
 
 .submit {
 	display: inline-block;
+	box-sizing: border-box;	
 }
 
 .register {
-	margin-left: 4em;
+	/*margin-left: 4em;*/
+}
+
+.navigation_bar {
+	background-color: orange;
+}
+
+li {
+	display: inline-block;
+	margin-right: 9%
+}
+
+.li3 {
+	margin-right: 9%	
+}
+
+.sidebar {
+	width: 15%;
+	height: 50em;
+	background-color: blue;
 }
