layout complete, now to implement API

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,12 @@
 <div class = 'sidebar'>
+	<form>
+		<label for='search'>Search for Item</label>		
+		<input type='text' name='search'>
+		<input type='submit'>
+	</form>
+	<button>Walmart</button>
+	<button>Amazon</button>
+	<button>Target</button>
 </div>
 <div class = 'walmart'>
 </div>
