--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,11 +39,32 @@ li {
 }
 
 .li3 {
-	margin-right: 9%	
+	margin-right: 60%	
 }
 
 .sidebar {
 	width: 15%;
 	height: 50em;
-	background-color: blue;
+	background-color: lightblue;
+	display: inline-block;
+}
+
+.sidebar form {
+	margin-bottom: 1em;
+}
+
+.sidebar button {
+	width: 31%;
+	margin-left: 2px;
+	display: inline-block;
+} 
+
+.walmart,
+.target,
+.amazon {
+	width: 27.6%;
+	border: 1px black solid;
+	display: inline-block;
+	vertical-align: top;
+	height: 50em;
 }
